[package]
name = "spirit_box_bot"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/spirit_box_bot"
repository = "https://github.com/celeo/spirit_box_bot"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
log = "0.4.17"
once_cell = "1.17.1"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
tokio = { version = "1.28.0", features = ["full"] }
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
